--- a/index.html
+++ b/index.html
@@ -9,6 +9,71 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <img id="gameover" class="gameover-img d-none" src="./img/gameover.jpg">
+    <button onclick="restart()" id="restart-button" class="restart-button d-none">Restart</button>
+    <div class="player-panel">
+        <div  id="player-1">
+            <img class="" src="./img/circle.png">Player 1 
+        </div>
+        <div class="player-inactive" id="player-2">
+            <img class="" src="./img/x.png">Player 2
+        </div>
+    </div>
+    <div class="primary-container">
+        <div id="line-1" class="horizontal-line" style="top: 4rem; left: 3.4rem;"></div>
+        <div id="line-2" class="horizontal-line" style="top: 12.2rem; left: 3.4rem;"></div>
+        <div id="line-3" class="horizontal-line" style="top: 20.8rem; left: 3.4rem;"></div>
+        <div id="line-4" class="horizontal-line make-vertical" style="top: 12.8rem; left: 3rem;"></div>
+        <div id="line-5" class="horizontal-line make-vertical" style="top: 12.8rem; left: 11.4rem;"></div>
+        <div id="line-6" class="horizontal-line make-vertical" style="top: 12.8rem; right: 11.4rem;"></div>
+        <div id="line-7" class="horizontal-line spin-45" style="top: 12.5rem; width: 25.6rem;"></div>
+        <div id="line-8" class="horizontal-line spin-135" style="top: 12rem; width: 25.6rem;"></div>
+
+        <table>
+            <tr>
+                <td onclick="fillShape(0)">
+                    <img id="circle-0" class="shape d-none" src="./img/circle.png">
+                    <img id="cross-0" class="shape d-none" src="./img/x.png">
+                </td>
+                <td onclick="fillShape(1)">
+                    <img id="circle-1" class="shape d-none" src="./img/circle.png">
+                    <img id="cross-1" class="shape d-none" src="./img/x.png">
+                </td>
+                <td onclick="fillShape(2)">
+                    <img id="circle-2" class="shape d-none" src="./img/circle.png">
+                    <img id="cross-2" class="shape d-none" src="./img/x.png">
+                </td>
+            </tr>
+            <tr>
+                <td onclick="fillShape(3)">
+                    <img id="circle-3" class="shape d-none" src="./img/circle.png">
+                    <img id="cross-3" class="shape d-none" src="./img/x.png">
+                </td>
+                <td onclick="fillShape(4)">
+                    <img id="circle-4" class="shape d-none" src="./img/circle.png">
+                    <img id="cross-4" class="shape d-none" src="./img/x.png">
+                </td>
+                <td onclick="fillShape(5)">
+                    <img id="circle-5" class="shape d-none" src="./img/circle.png">
+                    <img id="cross-5" class="shape d-none" src="./img/x.png">
+                </td>
+            </tr>
+            <tr>
+                <td onclick="fillShape(6)">
+                    <img id="circle-6" class="shape d-none" src="./img/circle.png">
+                    <img id="cross-6" class="shape d-none" src="./img/x.png">
+                </td>
+                <td onclick="fillShape(7)">
+                    <img id="circle-7" class="shape d-none" src="./img/circle.png">
+                    <img id="cross-7" class="shape d-none" src="./img/x.png">
+                </td>
+                <td onclick="fillShape(8)">
+                    <img id="circle-8" class="shape d-none" src="./img/circle.png">
+                    <img id="cross-8" class="shape d-none" src="./img/x.png">
+                </td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 </html>
