add draw screen

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <div id="game-draw" class="game-draw d-none" src="">Unentschieden</div>
     <img id="gameover" class="gameover-img d-none" src="./img/gameover.jpg">
     <button onclick="restart()" id="restart-button" class="restart-button d-none">Restart</button>
     <div class="player-panel">
